--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12" ng-controller="mainController">
-                    <p>Hello world!</p>
+                    <p>Hello {{name}}!</p>
                     <form name="myForm">
                         <label>
                             * Enter text: *
