--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
                             <div ng-message="maxlength">This field can be at most 15 characters long.</div>
                         </div>
                     </form>
+                    <hr />
+                    <p>What's your Github username?</p>
+                    <hr />
                 </div>
             </div>
         </div>
