--- a/index.html
+++ b/index.html
@@ -79,7 +79,10 @@
                     </form>
                     <hr />
                     <p>What's your Github username?</p>
+                    <input type='text' ng-model="username" />
                     <hr />
+                    <h1>Github.com/{{username}}</h1>
+                    <h1>Github.com/{{lowerusername()}}</h1>
                 </div>
             </div>
         </div>
