--- a/index.html
+++ b/index.html
@@ -103,10 +103,12 @@
             <p>
                 <a href="#/second">Second</a>
             </p>
+            
             <div class="row" ng-view>
-                {{ myVar }}
+                <p>{{ myVar }}</p>
             </div>
         </div>
+        
         <script>
             var currentstep = 0;
 
