--- a/index.html
+++ b/index.html
@@ -92,6 +92,11 @@
                     <h2>Offers</h2>
                     <p>{{ offers }}</p>
 -->
+                    <search-result></search-result>
+                    <p search-result></p>
+                    <p class="search-result"></p>
+                    <!-- directive: search-result -->
+                    
                 </div>
             </div>
         </div>
