Custom directive, isolated scope

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 -->
                     <search-result></search-result>
                     <p search-result></p>
-                    <p class="search-result"></p>
+                    <p class="search-result" person-name="{{ person.name }}"></p>
                     <!-- directive: search-result -->
                     
                 </div>
