--- a/pages/main.html
+++ b/pages/main.html
@@ -1,2 +1,4 @@
-Main content {{ person.name }}
+Main content
 <input type="text" ng-model="name" />
+
+<search-result person-object="person" my-function="my-function(aname)"></search-result>
