Directive isolated scope - Function case

--- a/pages/main.html
+++ b/pages/main.html
@@ -1,4 +1,4 @@
 Main content
 <input type="text" ng-model="name" />
 
-<search-result person-object="person" my-function="my-function(aname)"></search-result>
+<search-result person-object="person" my-function="myFunction(aname)"></search-result>
