Transclusion (Attribute & Tag)
Transclusion (Attribute & Tag)

--- a/directives/searchResult.html
+++ b/directives/searchResult.html
@@ -2,4 +2,7 @@
     <p>Search Result Directive.</p>
     <p>Main content {{ personObject.name }}</p>
     <div>{{ myFunction({aname: personObject.name}) }}</div>
+    
+    <strong ng-transclude></strong>
+<!--    <strong><ng-transclude></ng-transclude></strong>-->
 </div>
