--- a/pages/main.html
+++ b/pages/main.html
@@ -1,4 +1,6 @@
 Main content
 <input type="text" ng-model="name" />
 
-<search-result person-object="person" my-function="myFunction(aname)" ng-repeat="person in people"></search-result>
+<search-result person-object="person" my-function="myFunction(aname)" ng-repeat="person in people">
+    ATTENTION!
+</search-result>
